Add method to generate random input

--- a/agileengine/second/PlusMinusConversion.ipynb
+++ b/agileengine/second/PlusMinusConversion.ipynb
@@ -107,6 +107,52 @@
     "\n",
     "SolveBuild(sample)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "minusplusplusminusminusminusminusplusminusplus"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "string GenerateRandomInput(int wordsCount) {\n",
+    "    var random = new Random();\n",
+    "    var input = new StringBuilder();\n",
+    "\n",
+    "    while (wordsCount > 0) {\n",
+    "        input.Append(random.Next() % 2 == 0 ? \"plus\" : \"minus\");\n",
+    "        wordsCount--;\n",
+    "    }\n",
+    "\n",
+    "    return input.ToString();\n",
+    "}\n",
+    "\n",
+    "GenerateRandomInput(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
